[project]
name = "dist-plot-gallery"
version = "0.1.0"
description = "Построение графиков для визуализации параметризации распределений случайно величины"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.5.1",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "tqdm>=4.68.4",
]

[tool.ruff]
target-version = "py314"
select = ["ALL"]
ignore = ["RUF001", "RUF003", "RUF002", "E501", "S101"]
fixable = ["ALL"]
